fixed spacing

--- a/style.css
+++ b/style.css
@@ -251,8 +251,7 @@ h4 {
   font-size: 22px;
   line-height: 1.6em;
   margin-top: 30px;
-  margin-left: 30px;
-  margin: 0 auto;
+  margin-bottom: 30px;
 }
 
 .figure-3-caption {
